# Evident-AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_eval.py
.github/workflows/: ai_quality_gate.yaml
config/: prompts.yaml  settings.py
src/: test_production_pipeline.py
src/evaluation/: dataset.json  eval_gate.py  evaluate.py  judge.py  metrics.py  ragas_embedder.py  ragas_eval.py  run_evals.py
src/generation/: llm.py  prompt.py
src/ingestion/: README.md  chunker.py  embedder.py  pdf_loader.py  vector_store.py
src/pipeline/: evident_rag.py  ingestion.py  retrieval.py
src/retrieval/: bm25.py  dynamic_ingest.py  embedder.py  hybrid.py  reranker.py  retriever.py  vector_search.py  vector_store.py
