[project]
name = "evidentai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.21.1",
    "datasets>=4.8.4",
    "flashrank>=0.2.10",
    "hf-xet>=1.4.3",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.25",
    "nltk>=3.9.4",
    "openai>=2.30.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
]
